--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation libs.converter.gson
     implementation libs.retrofit
     implementation libs.logging.interceptor
+    implementation libs.converter.gson
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
